--- a/editor/uncrustify.css
+++ b/editor/uncrustify.css
@@ -3,6 +3,13 @@
     right: 1em;
     top: 1em;
     text-align: center;
+    opacity: 0;
+    transition: all 1s ease 1.5s;
+}
+
+#actions:hover {
+    opacity: 1;
+    transition: all 0.3s ease 0s;
 }
 
 .new-item {
